--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"default": "dist/index.html",
 	"scripts": {
 		"dev": "rimraf dist && cross-env NODE_ENV=development parcel src/index.html",
-		"build": "rimraf dist && cross-env NODE_ENV=production parcel build src/index.html",
+		"build": "npm rebuild && rimraf dist && cross-env NODE_ENV=production parcel build src/index.html",
 		"prettier": "prettier --write \"**/**/*.{js,html,ts,md}\""
 	},
 	"keywords": [
