--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"@amoutonbrady/baracuda": "^1.4.0",
+		"@arr/filter": "^1.0.2",
 		"@arr/find": "^1.0.1",
 		"@arr/findindex": "^1.0.1",
 		"@arr/map": "^1.0.1",
